syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";

import "alice/megamind/protos/common/directive_channel.proto";

import "google/protobuf/wrappers.proto";

import "mapreduce/yt/interface/protos/extension.proto";

// Options are applied to the stack engine effect
message TEffectOptions {
    // If the option is set, it will overwrite the value from response
    google.protobuf.BoolValue ForcedShouldListen = 1 [json_name = "forced_should_listen"];
    oneof OptionalChannel {
        option (NYT.variant_field_name) = "optional_channel";
        TDirectiveChannel.EDirectiveChannel Channel = 2 [json_name = "channel", (NYT.column_name) = "channel"];
    }
    oneof OptionalForcedEmotion {
        option (NYT.variant_field_name) = "optional_forced_emotion";
        string ForcedEmotion = 3 [json_name = "forced_emotion", (NYT.column_name) = "forced_emotion"];
    }
}
