syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "StackEngineProto";

import "alice/megamind/protos/common/effect_options.proto";
import "alice/megamind/protos/common/frame.proto";
import "alice/megamind/protos/scenarios/directives.proto";
import "alice/megamind/protos/scenarios/frame.proto";

message TStackEngineEffect {
    oneof Effect {
        TCallbackDirective Callback = 1 [json_name = "callback"];
        TParsedUtterance ParsedUtterance = 2 [json_name = "parsed_utterance"];
    }

    NAlice.TEffectOptions Options = 3 [json_name = "options"];
}

message TStackEngineAction {
    message TResetAdd {
        message TRecoveryAction {
            TCallbackDirective Callback = 1 [json_name = "callback"];
        }

        repeated TStackEngineEffect Effects = 1 [json_name = "effects"];
        TRecoveryAction RecoveryAction = 2 [json_name = "recovery_action"];
    }
    message TNewSession {
    }

    oneof Action {
        TResetAdd ResetAdd = 1 [json_name = "reset_add"];
        TNewSession NewSession = 2 [json_name = "new_session"];
    }
}

message TStackEngine {
    repeated TStackEngineAction Actions = 1 [json_name = "actions"];
}
